[workspace]

[package]
name = "mutringbuf"
version = "0.5.1"
edition = "2021"
readme = "README.md"
authors = ["Skilfingr <skilvingr@gmail.com>"]
description = "A lock-free single-producer, single-consumer (SPSC) ring buffer with in-place mutability, asynchronous support, and virtual memory optimisation."
repository = "https://github.com/Skilvingr/rust-mutringbuf"
license = "MIT OR Apache-2.0"
keywords = ["lock-free", "async", "mmap", "circular", "buffer"]
categories = ["asynchronous", "concurrency", "data-structures", "no-std", "no-std::no-alloc"]
documentation = "https://docs.rs/mutringbuf"

[features]
default = ["alloc"]
alloc = []
vmem = ["alloc", 'dep:libc']
async = []

[dependencies]
crossbeam-utils = { version = "0.8.21", default-features = false }
libc = { version = "1.0.0-alpha.1", optional = true }

[dev-dependencies]
divan = "0.1.21"
tokio-test = { version = "0.4.4" }
iai-callgrind = "0.14.0"

[target.'cfg(cpal)'.dev-dependencies]
cpal = { version = "0.15.3" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(cpal)'] }

[[bench]]
name = "base"
path = "benches/divan/base.rs"
harness = false

[[bench]]
name = "parts"
path = "benches/divan/parts.rs"
harness = false

[[bench]]
name = "slices"
path = "benches/divan/slices.rs"
harness = false

[[bench]]
name = "iai_base"
path = "benches/iai_benches/iai_base.rs"
harness = false